[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[features]
# default = ["analysis"]
full = [
  "analysis",
  "input",
  "output",
]
analysis = []
input = []
output = []

[dependencies]
rustfft = "6.2.0"
cpal = { git = "https://github.com/cdellacqua/cpal.rs.git", rev = "4a8c9b8ea6566b1fcca1bf7b816464c3151e7230" }
mutex_ext = { path = "../mutex_ext.rs" }
resource_daemon = { path = "../resource_daemon.rs" }
math_utils = { path = "../math_utils.rs" }
thiserror = "2.0.9"
# ringbuffer = { git = "https://github.com/cdellacqua/ringbuffer.rs.git", rev = "70832ae18daad75a317c7854311562e8c0014f2b" }
ringbuffer = { path = "../../../Contrib/ringbuffer.rs" }
derive_more = { version = "1.0.0", features = ["add", "add_assign", "deref", "deref_mut", "mul", "mul_assign"] }
delegate = "0.13.2"
# arrayref = "0.3.9"
# itertools = "0.14.0"

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fft_speed"
harness = false
required-features = ["analysis"]
