[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[features]
default = ["analysis"]
full = [
  "analysis",
  "input",
  "output",
]
analysis = []
input = []
output = []

[dependencies]
rustfft = "6.2.0"
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "c5a163e1332faa505948fe9550b85faf14c1322a" }
mutex_ext = { path = "../mutex_ext.rs" }
resource_daemon = { path = "../resource_daemon.rs" }
math_utils = { path = "../math_utils.rs" }
thiserror = "2.0.11"
ringbuffer = { git = "https://github.com/cdellacqua/ringbuffer.rs.git", rev = "caaf117582353aa201f75bf682ea63d6cb546236" }
derive_more = { version = "1.0.0", features = ["add", "add_assign", "deref", "deref_mut", "mul", "mul_assign", "from"] }

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fft_speed"
harness = false
required-features = ["analysis"]

[[bench]]
name = "goertzel_speed"
harness = false
required-features = ["analysis"]
